--- a/index.html
+++ b/index.html
@@ -1,24 +1,27 @@
 <!DOCTYPE html>  
 <html lang="ja">
-  <head>
-    <meta charset="UTF-8">
-    <title>HTML/CSSの学習</title>
-    <style>
-      h2 {
-        color: red;
-      }
-    </style>
-  </head>
-  <body>
-    <h1>h1要素：段落タイトル</h1>
-    <p>p要素：文章が入ります。文章が入ります。文章が入ります。</p>
-    <h2>h2要素：小見出し1</h2>
-    <p style="font-size: 25px;">
-      p要素：文章が入ります。文章が入ります。文章が入ります。
-    </p>
-    <h2>h2要素：小見出し2</h2>
-    <p style="font-weight: bold;">
-      p要素：文章が入ります。文章が入ります。文章が入ります。
-    </p>
-  </body>
- </html> 
+    <head>
+        <meta charset="UTF-8">
+        <title>HTML/CSSの学習</title>
+        <link rel="stylesheet" href="stylesheet.css">
+    </head>
+    <body>
+        <div id="header">
+            <h1><a href="index.html"><img id="corridor" src="images/corridor.jpg" alt="大学の廊下" /></a></h1>
+        </div>
+        <div id="wrapper">
+            <div id="nav">
+                <ul>
+                    <li><a href="home.html">ナビ1</a></li>
+                    <li><a href="#">ナビ2</a></li>
+                    <li><a href="#">ナビ3</a></li>
+                    <li><a href="#">ナビ4</a></li>
+                    <li><a href="#">ナビ5</a></li>
+                </ul>
+            </div>
+        </div>
+        <div id="footer">
+            <p>&copy; 20xx ○○ All Rights Reserved.</p>
+        </div>
+    </body>
+</html> 
